# stream-window

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENCE  README.md
.github/workflows/: build.yml
src/: lib.rs  merge.rs  periodic.rs  sliding.rs  tests.rs  tumbling.rs
