[package]
name = "stream-window"
version = "0.1.0"
edition = "2021"
description = "Windows for streams"
homepage = "https://github.com/konrads/stream-window"
repository = "https://github.com/konrads/stream-window"
keywords = ["async", "stream", "tokio", "window"]
categories = []
license = "MIT OR Apache-2.0"

[dependencies]
async-stream = ">=0.1.0"
futures = ">=0.1.0"
tokio = { version = ">=0.1.0", features = ["macros"] }
tokio-stream = ">=0.1.0"

[dev-dependencies]
tokio-test = ">=0.1.0"
async-stream = ">=0.1.0"
