[package]
name = "stream-window"
version = "0.1.2"
edition = "2021"
description = "Windows for streams"
homepage = "https://github.com/konrads/stream-window"
repository = "https://github.com/konrads/stream-window"
keywords = ["async", "stream", "tokio", "window"]
categories = []
license = "MIT OR Apache-2.0"

[dependencies]
async-stream = ">=0.1.0"
futures = ">=0.1.0"
futures-util = "0.3.31"
tokio = { version = ">=0.1.0", features = ["macros"] }
tokio-stream = ">=0.1.0"

[dev-dependencies]
async-stream = ">=0.1.0"
itertools = "0.13.0"
tokio-test = ">=0.1.0"
futures-channel = "0.3.31"
